# minuscule-templates

rust::default/: Cargo.toml  Minuscule.toml
rust::default/.cargo/: config.toml
rust::default/src/: lib.rs
