[package]
name = "{{ module_name }}"
version ="0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.94"
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
minuscule-types = { version = "*", git = "ssh://git@github.com:subbu963/minuscule.git", features = ["wasm"]}
